# LegoIzer

./: .gitignore  pyproject.toml
data/: colors.xml
src/: example.ipynb  pypxl.py  utils.py
