[tool.poetry]
name = "legoizer"
version = "0.1.0"
description = "Create lego mosaic"
authors = ["Andy Alexander <code@homeemail.me.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.0"
opencv-python = "^4.8.0.76"
scikit-image = "^0.21.0"
scikit-learn = "^1.3.0"
jupyterlab = "^4.0.6"
matplotlib = "^3.8.0"
pandas = "^2.1.0"
lxml = "^4.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
